--- a/src/cosy/www/html/profile.html
+++ b/src/cosy/www/html/profile.html
@@ -11,7 +11,7 @@
             <div class="form-group has-feedback" id="avatardiv">
             <p id="pavatar"></p>
             
-            <input id="avatar" type="file" class="form-control" placeholder="Email"/>
+            <input id="avatar" type="file" class="form-control"/>
           </div>
           <div class="form-group has-feedback" id="userdiv">
             <input id="username" type="text" class="form-control" placeholder="Username"/>
@@ -24,21 +24,21 @@
             <span id="emailerror" style="color:red;display:none;"></span>
           </div>
            <div class="form-group has-feedback" id="namediv">
-            <input id="name" type="text" class="form-control" placeholder="Home Page"/>
+            <input id="name" type="text" class="form-control" placeholder="Name"/>
           </div>
            <div class="form-group has-feedback" id="orgdiv">
-            <input id="org" type="text" class="form-control" placeholder="Home Page"/>
+            <input id="org" type="text" class="form-control" placeholder="organization"/>
           </div>
            <div class="form-group has-feedback" id="homediv">
             <input id="home" type="text" class="form-control" placeholder="Home Page"/>
           </div>
           <div class="form-group has-feedback" id="homediv">
-              <select id="lang">
+              Language: <select id="lang">
               <option value="EN">English</option>
               </select>
           </div>
           <div class="form-group has-feedback" id="homediv">
-              <select id="country">
+          Country: <select id="country">
               <option value="AF">Afghanistan</option>
               <option value="AX">Åland Islands</option>
               <option value="AL">Albania</option>
@@ -291,7 +291,7 @@
             </select>
           </div>
           <div class="form-group has-feedback" id="homediv">
-            <input id="city" type="text" class="form-control" placeholder="Home Page"/>
+            <input id="city" type="text" class="form-control" placeholder="City"/>
             </div>
            <div class="form-group has-feedback" id="homediv">
            <button type="submit" class="btn btn-primary btn-block btn-flat" id="update">Save</button>
