--- a/src/cosy/www/index.html
+++ b/src/cosy/www/index.html
@@ -5,9 +5,9 @@
     <title>CosyVerif</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- Bootstrap 3.3.2 -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <!-- Font Awesome Icons -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <!-- Theme style -->
     <link href="css/AdminLTE.css" rel="stylesheet" type="text/css" />
     <link href="css/skins/_all-skins.min.css" rel="stylesheet" type="text/css" />
@@ -190,9 +190,9 @@
     </div><!-- ./wrapper -->
 
       <!-- jQuery 2.1.3 -->
-    <script src="js/jQuery-2.1.3.min.js"></script>
+    <script src="js/jquery.js"></script>
     <!-- Bootstrap 3.3.2 JS -->
-    <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/app.min.js" type="text/javascript"></script>
 
     
