--- a/src/cosy/www/test.html
+++ b/src/cosy/www/test.html
@@ -1,44 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>CosyVerif| Log in</title>
-    <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
-    <!-- Bootstrap 3.3.2 -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <!-- Font Awesome Icons -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <!-- Theme style -->
-    <link href="css/AdminLTE.css" rel="stylesheet" type="text/css" />
-    <!-- iCheck 
-    <link href="../../plugins/iCheck/square/blue.css" rel="stylesheet" type="text/css" />
--->
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
+  <head></head>
   </head>
   <body class="login-page">
-    <div class="login-box" id="content">
-		
-    </div><!-- /.login-box -->
-
-    <!-- jQuery 2.1.3 -->
-    <script src="js/jQuery-2.1.3.min.js"></script>
-    <!-- Bootstrap 3.3.2 JS -->
-    <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-    <!-- iCheck 
-    <script src="../../plugins/iCheck/icheck.min.js" type="text/javascript"></script>-->
-    <script src="js/library.js" type="text/javascript"></script>
-
-	<script type="text/javascript" lang="JavaScript" src="/js/lua.vm.js"></script>
-
-	
-	<script type="text/lua" lang="Lua" id="luascript">
-	local location = js.global.location
-	require (location.origin .."/js/lua/auth.lua")
-	</script>
+  <!--script type="text/javascript" lang="JavaScript" src="https://rawgit.com/daurnimator/lua.vm.js/f171a97dc757e86a14203330807c2988c1eddef0/dist/lua.vm.js"></script-->
+  <script type="text/javascript" lang="JavaScript" src="https://rawgit.com/daurnimator/lua.vm.js/b363f4e26e7a3df749c3dc305c1fb7eb90b62a99/dist/lua.vm.js"></script>
+  <script type="text/lua" lang="Lua" id="luascript">
+  local function main()
+    local co, sync = coroutine.running ()
+    local request = _G.js.new (_G.window.XMLHttpRequest)
+    request:open ("GET", "/html/sandbox.html", true)
+    local result, err
+    request.onreadystatechange = function (event)
+      if request.readyState == 4 then
+        if request.status == 200 then
+          result = request.responseText
+        else
+          err    = event.status
+        end
+        coroutine.resume (co)
+      end
+    end
+    request:send ()
+    coroutine.yield ()
+  end
+  local co = coroutine.create (main)
+  coroutine.resume (co)
+  </script>
   </body>
 </html>
