--- a/src/cosy/www/html/sandbox.html
+++ b/src/cosy/www/html/sandbox.html
@@ -5,7 +5,7 @@
         <title>CosyVerif Sandbox</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    
+
     <body>
         <!--script src="js/lua.js"></script-->
         <script type="text/javascript" lang="JavaScript" src="/js/jquery.js"></script>
@@ -23,9 +23,9 @@ local co = coroutine.create (function ()
     local library = require "cosy.library"
     local value   = require "cosy.value"
     local client  = library.connect "http://127.0.0.1:8080/"
-    local info    = client.information ()
+    local info    = client.server.information ()
     print ("info", value.expression (info))
-    local tos    = client.tos ()
+    local tos    = client.server.tos ()
     print ("tos", value.expression (tos))
     local user, err = client.user.create {
       username = "toto",
@@ -36,7 +36,7 @@ local co = coroutine.create (function ()
     }
     print ("user", value.expression (user), value.expression (err))
     local token, err = client.user.authenticate {
-      username = "toto",
+      user     = "toto",
       password = "pass",
     }
     print ("auth", token, err)
@@ -47,5 +47,5 @@ local co = coroutine.create (function ()
 end)
 coroutine.resume (co)
         </script>
-    </body> 
+    </body>
 </html>
