--- a/src/cosy/www/html/captchacli.html
+++ b/src/cosy/www/html/captchacli.html
@@ -1,12 +1,30 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="/css/AdminLTE.css" rel="stylesheet" type="text/css" />
+    <link href="/css/skins/_all-skins.min.css" rel="stylesheet" type="text/css" />
     <title>reCAPTCHA for Cosy Command Line</title>
   </head>
-  <body>
-    <div   id="captcha"></div>
-    <input type="submit"
-           id="submit"/>
+  <body style="  background-color: #3c8dbc;">
+    <div class="row" style="margin-top:20px;">
+      <div class="col-lg-4 col-xs-12">
+      </div>
+      <div class="col-lg-4 col-xs-12">
+        <div class="box box-success">
+          <div class="box-header with-border">
+          <h3 class="box-title">CosyVerif Command Line: Check Captcha</h3>
+          </div>
+          <div id="captcha" style= "margin: auto;width: 300px;padding: 25px 0;"></div>
+          <div class="box-footer" style="text-align:center;">
+            <div id="info" style="color:green;"></div>
+          </div>
+        </div>
+       
+      </div>
+      <div class="col-lg-4 col-xs-12">
+      </div>
+    </div>
     <script type="text/javascript"
             lang="JavaScript"
             src="/js/jquery.js">
@@ -23,24 +41,29 @@
       local location = js.global.location
       local loader   = require (location.origin .. "/lua/cosy.loader")
       local function main ()
-        local library  = require "cosy.library"
-        local value    = require "cosy.value"
-        local client   = library.connect (location.origin)
-        local info     = client.server.information ()
-        local port     = location.search:match "port=(%d+)"
-        local params   = js.new (js.global.Object)
-        params.sitekey = info.captcha
-        local id       = js.global.grecaptcha:render ("captcha", params)
-        local wsurl    = "ws://127.0.0.1:" .. tostring (port) .. "/"
-        (js.global.document:getElementById "submit").onclick = function ()
+        local library   = require "cosy.library"
+        local value     = require "cosy.value"
+        local client    = library.connect (location.origin)
+        local info      = client.server.information ()
+        local port      = location.search:match "port=(%d+)"
+        local params    = js.new (js.global.Object)
+        params.sitekey  = info.captcha
+        params.callback = function ()
+          js.global.document:getElementById("info").innerHTML = "Thank you. Go back to the terminal to continue (this windows will be closed in 3s)"
+          local wsurl    = "ws://127.0.0.1:" .. tostring (port) .. "/"
           local ws = js.new (js.global.WebSocket, wsurl, "cosycli")
-          ws.onopen = function ()
-            ws:send (value.expression {
-              response = js.global.grecaptcha:getResponse (id)
-            })
-            ws:close ()
-          end
+            ws.onopen = function ()
+              ws:send (value.expression {
+                response = js.global.grecaptcha:getResponse (id)
+              })
+              ws:close ()
+            end
+          local t = window:setTimeout(function()
+              window.close ()
+            end, 3000)
         end
+        local id        = js.global.grecaptcha:render ("captcha", params)
+
       end
       local co = coroutine.create (main)
       coroutine.resume (co)
