--- a/src/cosy/www/index.html
+++ b/src/cosy/www/index.html
@@ -34,7 +34,7 @@
             <span class="icon-bar"></span>
           </a>
           <div class="navbar-custom-menu" id="navbar-login">
-            
+
           </div>
         </nav>
       </header>
@@ -70,7 +70,7 @@
 
       <!-- Content Wrapper. Contains page content -->
       <div class="content-wrapper" id="content-wrapper">
-        
+
       </div><!-- /.content-wrapper -->
 
       <footer class="main-footer">
@@ -88,10 +88,10 @@
     <script src="js/app.min.js" type="text/javascript"></script>
     <script type="text/lua" lang="Lua" id="luascript">
     local location = js.global.location
-    local loader    = require (location.origin .. "/lua/cosy.loader")
-    require ("cosy.webclient.main")
+    local loader   = require (location.origin .. "/lua/cosy.loader")
+    require "cosy.webclient"
     </script>
-  
+
     <script src="https://maps.googleapis.com/maps/api/js?v=3" type="text/javascript"></script>
     <script type="text/javascript" lang="JavaScript" src="/js/lua.vm.js"></script>
   </body>
