--- a/src/cosy/www/html/main.html
+++ b/src/cosy/www/html/main.html
@@ -62,7 +62,7 @@
   </div>
   <div class="row">
     <div class="col-lg-12 col-xs-12">
-    <div class="box box-success">
+      <div class="box box-success">
         <div class="box-header with-border">
           <h3 class="box-title">Visitors</h3>
           <div class="box-tools pull-right">
@@ -75,11 +75,14 @@
             <div class="col-md-12 col-sm-12">
               <div class="pad">
                 <!-- Map will be created here -->
-                <div style="height: 325px;"><iframe src="/html/mapiframe.html" width="100%" height="100%" id="map" ></iframe></div>
+                <div style="height: 325px;">
+                  <iframe src="/html/mapiframe.html" width="100%" height="100%" id="map" ></iframe>
+                </div>
               </div>
             </div><!-- /.col -->
           </div><!-- /.row -->
         </div><!-- /.box-body -->
       </div>
+    </div>
   </div>
 </section><!-- /.content -->
