--- a/src/cosy/www/index.html
+++ b/src/cosy/www/index.html
@@ -1,16 +1,42 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>CosyVerif</title>
-    <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
-    <!-- Bootstrap 3.3.2 -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <!-- Font Awesome Icons -->
-    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <!-- Theme style -->
-    <link href="css/AdminLTE.css" rel="stylesheet" type="text/css" />
-    <link href="css/skins/_all-skins.min.css" rel="stylesheet" type="text/css" />
+    <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no'
+          name='viewport'>
+    <link href="css/bootstrap.min.css"
+          rel="stylesheet" type="text/css" />
+    <link href="css/font-awesome.min.css"
+          rel="stylesheet" type="text/css" />
+    <link href="css/AdminLTE.css"
+          rel="stylesheet" type="text/css" />
+    <link href="css/skins/_all-skins.min.css"
+          rel="stylesheet" type="text/css" />
+    <script src="/js/socket.io.js"
+            type="text/javascript"></script>
+    <script src="/js/socket.io-stream.js"
+            type="text/javascript"></script>
+    <script src="/js/terminal.js"
+            type="text/javascript"></script>
+    <script src="/js/jquery.js"
+            type="text/javascript"></script>
+    <script src="/js/bootstrap.min.js"
+            type="text/javascript"></script>
+    <script src="/js/app.min.js"
+            type="text/javascript"></script>
+    <script src="/js/lua.vm.js"
+            type="text/javascript"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3"
+            type="text/javascript"></script>
+    <style>
+      .terminaljs {
+        background: black;
+        color: white;
+        font-family: Courier, monospace;
+        display:inline-block;
+      }
+    </style>
   </head>
   <body class="skin-blue sidebar-mini">
     <!-- Site wrapper -->
@@ -34,7 +60,6 @@
             <span class="icon-bar"></span>
           </a>
           <div class="navbar-custom-menu" id="navbar-login">
-
           </div>
         </nav>
       </header>
@@ -47,6 +72,19 @@
         <section class="sidebar">
           <!-- sidebar menu: : style can be found in sidebar.less -->
           <ul class="sidebar-menu">
+            <li class="header">Layout</li>
+            <li class="active">
+              <a href="#" class="signin" id="terminal-button">
+                <i class="fa fa-dashboard"></i>
+                <span>Terminal</span>
+              </a>
+            </li>
+            <li class="active">
+              <a href="#" class="signin" id="website-button">
+                <i class="fa fa-dashboard"></i>
+                <span>Website</span>
+              </a>
+            </li>
             <li class="header">MAIN NAVIGATION</li>
             <li class="active">
               <a href="/">
@@ -70,9 +108,7 @@
 
       <!-- Content Wrapper. Contains page content -->
       <div class="content-wrapper" id="content-wrapper">
-
       </div><!-- /.content-wrapper -->
-
       <footer class="main-footer">
         <div class="pull-right hidden-xs">
           <b>Version</b> 1.0
@@ -81,18 +117,30 @@
       </footer>
     </div><!-- ./wrapper -->
 
-      <!-- jQuery 2.1.3 -->
-    <script src="js/jquery.js"></script>
-    <!-- Bootstrap 3.3.2 JS -->
-    <script src="js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="js/app.min.js" type="text/javascript"></script>
-    <script type="text/lua" lang="Lua" id="luascript">
-    local location = js.global.location
-    local loader   = require (location.origin .. "/lua/cosy.loader")
-    require "cosy.webclient"
+    <script type="text/lua" lang="Lua">
+      local Loader = require (js.global.location.origin .. "/lua/cosy.loader")
+      js.global.document:getElementById "terminal-button".onclick = function ()
+        local co = coroutine.create (function ()
+          js.global.document:getElementById "content-wrapper".innerHTML = Loader.loadhttp "/html/terminal.html"
+          local containers = js.global.document:getElementsByClassName "terminaljs"
+          local socket     = js.global.io (js.global.location.origin .. "/pty")
+          for i = 0, #containers do
+            containers [i].tabindex = 0;
+            local term   = js.new (js.global.Terminal, containers[i].dataset)
+            local stream = js.global.ss:createStream { decodeStrings = false, encoding = "utf-8" }
+            js.global.ss (socket):emit ("new", stream, containers[i].dataset)
+            stream:pipe (term):dom (containers[i]):pipe (stream)
+          end
+        end)
+        coroutine.resume (co)
+      end
+      js.global.document:getElementById "website-button".onclick = function ()
+        local co = coroutine.create (function ()
+          js.global.document:getElementById "content-wrapper".innerHTML = Loader.loadhttp "/html/main.html"
+        end)
+        coroutine.resume (co)
+      end
+      require "cosy.webclient"
     </script>
-
-    <script src="https://maps.googleapis.com/maps/api/js?v=3" type="text/javascript"></script>
-    <script type="text/javascript" lang="JavaScript" src="/js/lua.vm.js"></script>
   </body>
 </html>
