--- a/src/cosy/www/index.html
+++ b/src/cosy/www/index.html
@@ -69,23 +69,30 @@
 
       <!-- Content Wrapper. Contains page content -->
       <div class="content-wrapper" id="content-wrapper">
-        
+
       </div><!-- /.content-wrapper -->
 
-      <footer class="main-footer">
+      <!-- <footer class="main-footer">
         <div class="pull-right hidden-xs">
-          <b>Version</b> 1.0
+          <b>version</b> 0.1
         </div>
-        <strong>Copyright &copy; 2014-2015 CosyVerif. All rights reserved.
-      </footer>
+        <strong>Copyright &copy; 2014-2016 CosyVerif. All rights reserved.
+      </footer> -->
     </div><!-- ./wrapper -->
 
       <!-- jQuery 2.1.3 -->
-    <script src="js/jquery.js"></script>
+    <script src="js/jquery.js">
+    </script>
     <!-- Bootstrap 3.3.2 JS -->
-    <script src="js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="js/app.min.js" type="text/javascript"></script>
-    <script type="text/lua" lang="Lua" id="luascript">
+    <script src="js/bootstrap.min.js"
+            type="text/javascript">
+    </script>
+    <script src="js/app.min.js"
+            type="text/javascript">
+    </script>
+    <script type="text/lua"
+            lang="Lua"
+            id="luascript">
       local origin   = _G.js.global.location.origin
       local coromake = require (origin .. "/lua/coroutine.make")
       _G.coroutine = coromake ()
@@ -100,8 +107,12 @@
       end)
       coroutine.resume (co)
     </script>
-  
-    <script src="https://maps.googleapis.com/maps/api/js?v=3" type="text/javascript"></script>
-    <script type="text/javascript" lang="JavaScript" src="/js/lua.vm.js"></script>
+
+    <script src="https://maps.googleapis.com/maps/api/js?v=3"
+            type="text/javascript">
+    </script>
+    <script type="text/javascript"
+            lang="JavaScript" src="/js/lua.vm.js">
+    </script>
   </body>
 </html>
