--- a/src/cosy/www/html/main.html
+++ b/src/cosy/www/html/main.html
@@ -7,56 +7,58 @@
 <!-- Main content -->
 <section id="content" class="content">
   <div class="row">
-    <div class="col-lg-3 col-xs-6">
-      <!-- small box -->
+    <div class="col-lg-2 col-xs-6">
+      <div class="small-box bg-yellow">
+        <div class="inner">
+          <h3 id="#user">{{{#user}}}</h3>
+          <p>Users</p>
+        </div>
+        <a href="#" class="small-box-footer">Go to users <i class="fa fa-arrow-circle-right"></i></a>
+      </div>
+    </div><!-- ./col -->
+    <div class="col-lg-2 col-xs-6">
       <div class="small-box bg-aqua">
         <div class="inner">
-          <h3>90</h3>
+          <h3 id="#project">{{{#project}}}</h3>
           <p>Projects</p>
-        </div>
-        <div class="icon">
-          <i class="fa fa-folder-o"></i>
         </div>
         <a href="#" class="small-box-footer">Go to projects <i class="fa fa-arrow-circle-right"></i></a>
       </div>
     </div><!-- ./col -->
-    <div class="col-lg-3 col-xs-6">
-      <!-- small box -->
+    <div class="col-lg-2 col-xs-6">
       <div class="small-box bg-green">
         <div class="inner">
-          <h3>180</h3>
-          <p>Ressources</p>
+          <h3 id="#formalism">{{{#formalism}}}</h3>
+          <p>Formalisms</p>
         </div>
-        <div class="icon">
-          <i class="ion ion-stats-bars"></i>
-        </div>
-        <a href="#" class="small-box-footer">Go to ressources <i class="fa fa-arrow-circle-right"></i></a>
+        <a href="#" class="small-box-footer">Go to formalisms <i class="fa fa-arrow-circle-right"></i></a>
       </div>
     </div><!-- ./col -->
-    <div class="col-lg-3 col-xs-6">
-      <!-- small box -->
-      <div class="small-box bg-yellow">
+    <div class="col-lg-2 col-xs-6">
+      <div class="small-box bg-green">
         <div class="inner">
-          <h3>44</h3>
-          <p>User Registrations</p>
+          <h3 id="#model">{{{#model}}}</h3>
+          <p>Models</p>
         </div>
-        <div class="icon">
-          <i class="ion ion-person-add"></i>
-        </div>
-        <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+        <a href="#" class="small-box-footer">Go to models <i class="fa fa-arrow-circle-right"></i></a>
       </div>
     </div><!-- ./col -->
-    <div class="col-lg-3 col-xs-6">
-      <!-- small box -->
-      <div class="small-box bg-red">
+    <div class="col-lg-2 col-xs-6">
+      <div class="small-box bg-green">
         <div class="inner">
-          <h3>65</h3>
-          <p>Unique Visitors</p>
+          <h3 id="#service">{{{#service}}}</h3>
+          <p>Services</p>
         </div>
-        <div class="icon">
-          <i class="ion ion-pie-graph"></i>
+        <a href="#" class="small-box-footer">Go to services <i class="fa fa-arrow-circle-right"></i></a>
+      </div>
+    </div><!-- ./col -->
+    <div class="col-lg-2 col-xs-6">
+      <div class="small-box bg-green">
+        <div class="inner">
+          <h3 id="#scenario">{{{#scenario}}}</h3>
+          <p>Scenarios</p>
         </div>
-        <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+        <a href="#" class="small-box-footer">Go to scenarios <i class="fa fa-arrow-circle-right"></i></a>
       </div>
     </div><!-- ./col -->
   </div>
