--- a/src/cosy/www/index.html
+++ b/src/cosy/www/index.html
@@ -1,108 +1,42 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <title>CosyVerif</title>
-    <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
-    <!-- Bootstrap 3.3.2 -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <!-- Font Awesome Icons -->
-    <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <!-- Theme style -->
-    <link href="css/AdminLTE.css" rel="stylesheet" type="text/css" />
-    <link href="css/skins/_all-skins.min.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+          name="viewport" />
+    <link rel="icon"
+          href="/favicon.ico"
+          type="image/png" />
+    <link href="css/bootstrap.min.css"
+          rel="stylesheet"
+          type="text/css" />
+    <link href="css/font-awesome.min.css"
+          rel="stylesheet"
+          type="text/css" />
   </head>
-  <body class="skin-blue sidebar-mini">
-    <!-- Site wrapper -->
-    <div class="wrapper">
+  <body>
+    <div id="headbar"></div>
+    <div class="container-fluid main-content">
+      <div class="row">
+        <div id="sidebar"></div>
+        <div id="main"></div>
+      </div>
+    </div>
 
-      <header class="main-header">
-        <!-- Logo -->
-        <a href="index.html" id="logo" class="logo">
-          <!-- mini logo for sidebar mini 50x50 pixels -->
-          <span class="logo-mini"><b>C</b>V</span>
-          <!-- logo for regular state and mobile devices -->
-          <span class="logo-lg"><b>Cosy</b>Verif</span>
-        </a>
-        <!-- Header Navbar: style can be found in header.less -->
-        <nav class="navbar navbar-static-top" role="navigation">
-          <!-- Sidebar toggle button-->
-          <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <div class="navbar-custom-menu" id="navbar-login">
-          </div>
-        </nav>
-      </header>
-
-      <!-- =============================================== -->
-
-      <!-- Left side column. contains the sidebar -->
-      <aside class="main-sidebar">
-        <!-- sidebar: style can be found in sidebar.less -->
-        <section class="sidebar">
-          <!-- sidebar menu: : style can be found in sidebar.less -->
-          <ul class="sidebar-menu">
-            <li class="header">MAIN NAVIGATION</li>
-            <li class="active">
-              <a href="/">
-                <i class="fa fa-dashboard"></i>
-                <span>Dashboard</span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <i class="fa fa-files-o"></i>
-                <span>Projects</span>
-                <span class="label label-primary pull-right">90</span>
-              </a>
-            </li>
-          </ul>
-        </section>
-        <!-- /.sidebar -->
-      </aside>
-
-      <!-- =============================================== -->
-
-      <!-- Content Wrapper. Contains page content -->
-      <div class="content-wrapper" id="content-wrapper">
-
-      </div><!-- /.content-wrapper -->
-
-      <!-- <footer class="main-footer">
-        <div class="pull-right hidden-xs">
-          <b>version</b> 0.1
-        </div>
-        <strong>Copyright &copy; 2014-2016 CosyVerif. All rights reserved.
-      </footer> -->
-    </div><!-- ./wrapper -->
-
-      <!-- jQuery 2.1.3 -->
-    <script src="js/jquery.js">
-    </script>
-    <!-- Bootstrap 3.3.2 JS -->
-    <script src="js/bootstrap.min.js"
-            type="text/javascript">
-    </script>
-    <script src="js/app.min.js"
-            type="text/javascript">
-    </script>
     <script type="text/lua"
-            lang="Lua"
-            id="luascript">
+            lang="Lua">
       local origin   = _G.js.global.location.origin
       local coromake = require (origin .. "/lua/coroutine.make")
       _G.coroutine = coromake ()
       local co = coroutine.create (function ()
         xpcall (function ()
           local loader = require (origin .. "/lua/cosy.loader.js") {}
-          loader.scheduler.addthread (function ()
-            loader.load "cosy.webclient.main"
-          end)
+          loader.load "cosy.webclient"
+          loader.load "cosy.webclient.headbar" {
+            where = "headbar",
+          }
           loader.scheduler.loop ()
+          print "after loop"
         end, function (err)
           print ("error:", err)
           print (debug.traceback ())
@@ -111,11 +45,17 @@
       coroutine.resume (co)
     </script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?v=3"
+    <script src="js/jquery.js"
             type="text/javascript">
     </script>
-    <script type="text/javascript"
-            lang="JavaScript" src="/js/lua.vm.js">
+    <script src="js/bootstrap.min.js"
+            type="text/javascript">
+    </script>
+    <script src="js/map.js"
+            type="text/javascript">
+    </script>
+    <script src="/js/lua.vm.js"
+            type="text/javascript">
     </script>
   </body>
 </html>
