--- a/src/cosy/webclient/authentication/log-in.html
+++ b/src/cosy/webclient/authentication/log-in.html
@@ -1,26 +1,49 @@
-<div class="col-md-4 col-xs-12 col-centered">
+<div class="col-md-4 col-md-offset-4 col-centered">
   <form class="form-signin">
-    <h2 class="form-signin-heading">{{title}}</h2>
-    <input type="email"
-           id="email"
-           class="form-control has-feedback"
-           placeholder="{{email}}"
-           required autofocus />
-    <input type="password"
-           id="password"
-           class="form-control has-feedback"
-           placeholder="{{password}}"
-           required>
-    <div class="checkbox">
-      <label>
-        <input id="remember"
-               type="checkbox"
-               value="{{remember}}" />
-        {{remember}}
-      </label>
+    <h2 class="form-signin-heading">{{log-in:title}}</h2>
+    <div id="identifier-group"
+         class="form-group">
+      <label class="control-label"
+             for="identifier">{{log-in:identifier}}</label>
+      <div class="input-group">
+        <span class="input-group-addon"><i class="fa fa-user" ></i></span>
+        <input type="text"
+               id="identifier"
+               class="form-control has-feedback"
+               placeholder="{{sign-up:identifier}}"
+               required autofocus />
+        </div>
+      <div id="identifier-error"
+           class="help-block with-errors"></div>
     </div>
-    <button id="log-in"
-            class="btn btn-lg btn-primary btn-block"
-            type="submit">{{log-in}}</button>
+    <div id="password-group"
+         class="form-group">
+      <label class="control-label"
+             for="password">{{log-in:password}}</label>
+      <div class="input-group">
+        <span class="input-group-addon"><i class="fa fa-key" ></i></span>
+        <input type="password"
+               id="password"
+               class="form-control has-feedback"
+               placeholder="{{log-in:password}}"
+               required>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-md-6 col-centered">
+        <button id="accept"
+                class="btn btn-lg btn-primary btn-block btn-success"
+                type="submit">
+          <i class="fa fa-check-circle"></i>
+        </button>
+      </div>
+      <div class="col-md-6 col-centered">
+        <button id="cancel"
+                class="btn btn-lg btn-primary btn-block btn-danger"
+                type="submit">
+          <i class="fa fa-close"></i>
+        </button>
+      </div>
+    </div>
   </form>
 </div>
