--- a/src/cosy/webclient/headbar/init.html
+++ b/src/cosy/webclient/headbar/init.html
@@ -12,7 +12,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">{{title}}</a>
+      <a id="home"
+         class="navbar-brand"
+         href="#">{{title}}</a>
     </div>
     <div id="headbar:user"></div>
   </div>
