--- a/src/cosy/webclient/authentication/log-in.html
+++ b/src/cosy/webclient/authentication/log-in.html
@@ -1,6 +1,6 @@
 <div class="col-md-4 col-md-offset-4 col-centered">
-  <form class="form-signin">
-    <h2 class="form-signin-heading">{{log-in:title}}</h2>
+  <form>
+    <h2>{{log-in:title}}</h2>
     <div id="identifier-group"
          class="form-group">
       <label class="control-label"
@@ -30,18 +30,11 @@
       </div>
     </div>
     <div class="form-group">
-      <div class="col-md-6 col-centered">
+      <div class="col-md-6 col-md-offset-3 col-centered">
         <button id="accept"
                 class="btn btn-lg btn-primary btn-block btn-success"
                 type="submit">
           <i class="fa fa-check-circle"></i>
-        </button>
-      </div>
-      <div class="col-md-6 col-centered">
-        <button id="cancel"
-                class="btn btn-lg btn-primary btn-block btn-danger"
-                type="submit">
-          <i class="fa fa-close"></i>
         </button>
       </div>
     </div>
