--- a/src/cosy/webclient/authentication/sign-up.html
+++ b/src/cosy/webclient/authentication/sign-up.html
@@ -1,7 +1,6 @@
 <div class="col-md-4 col-md-offset-4 col-centered">
-  <form id="sign-up-form"
-        class="form-signin">
-    <h2 class="form-signin-heading">{{sign-up:title}}</h2>
+  <form id="sign-up-form">
+    <h2>{{sign-up:title}}</h2>
     <div id="identifier-group"
          class="form-group">
       <label class="control-label"
@@ -88,18 +87,11 @@
            class="help-block with-errors"></div>
     </div>
     <div class="form-group">
-      <div class="col-md-6 col-centered">
+      <div class="col-md-6 col-md-offset-3 col-centered">
         <button id="accept"
                 class="btn btn-lg btn-primary btn-block btn-success disabled"
                 type="submit">
           <i class="fa fa-check-circle"></i>
-        </button>
-      </div>
-      <div class="col-md-6 col-centered">
-        <button id="cancel"
-                class="btn btn-lg btn-primary btn-block btn-danger"
-                type="submit">
-          <i class="fa fa-close"></i>
         </button>
       </div>
     </div>
