--- a/src/cosy/www/index.html
+++ b/src/cosy/www/index.html
@@ -50,7 +50,13 @@
     <script src="js/bootstrap.min.js"
             type="text/javascript">
     </script>
-    <script src="js/map.js"
+    <script src="js/map.js?v=3&sensor=false&libraries=places"
+            type="text/javascript">
+    </script>
+    <script src="js/position.js"
+            type="text/javascript">
+    </script>
+    <script src="js/recaptcha.js?render=explicit"
             type="text/javascript">
     </script>
     <script src="/js/lua.vm.js"
