--- a/src/cosy/www/index.html
+++ b/src/cosy/www/index.html
@@ -13,6 +13,7 @@
     <link href="css/font-awesome.min.css"
           rel="stylesheet"
           type="text/css" />
+    <title>CosyVerif</title>
   </head>
   <body>
     <div id="headbar"></div>
