--- a/src/cosy/www/index.html
+++ b/src/cosy/www/index.html
@@ -7,10 +7,10 @@
     <link rel="icon"
           href="/favicon.ico"
           type="image/png" />
-    <link href="css/bootstrap.min.css"
+    <link href="css/bootstrap.css"
           rel="stylesheet"
           type="text/css" />
-    <link href="css/font-awesome.min.css"
+    <link href="css/font-awesome.css"
           rel="stylesheet"
           type="text/css" />
     <title>CosyVerif</title>
@@ -48,7 +48,10 @@
     <script src="js/jquery.js"
             type="text/javascript">
     </script>
-    <script src="js/bootstrap.min.js"
+    <script src="js/bootstrap.js"
+            type="text/javascript">
+    </script>
+    <script src="js/bootbox.js"
             type="text/javascript">
     </script>
     <script src="js/map.js?v=3&sensor=false&libraries=places"
