--- a/src/cosy/webclient/profile/edit.html
+++ b/src/cosy/webclient/profile/edit.html
@@ -17,7 +17,7 @@
         </label>
       </div>
       <div id="position-group"
-           class="form-group}">
+           class="form-group">
         <label class="control-label"
                for="position">{{profile:position}}
         </label>
@@ -133,6 +133,15 @@
                   class="btn btn-lg btn-primary btn-block btn-success disabled"
                   type="submit">
             <i class="fa fa-edit"></i>
+          </button>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-md-4 col-md-offset-3 col-centered">
+          <button id="delete"
+                  class="btn btn-lg btn-primary btn-block btn-danger"
+                  type="submit">
+            <i class="fa fa-trash"></i>
           </button>
         </div>
       </div>
