Add spinner to authentication button.

--- a/src/cosy/webclient/authentication/sign-up.html
+++ b/src/cosy/webclient/authentication/sign-up.html
@@ -91,7 +91,7 @@
         <button id="accept"
                 class="btn btn-lg btn-primary btn-block btn-success disabled"
                 type="submit">
-          <i class="fa fa-check-circle"></i>
+          <i class="fa fa-check"></i>
         </button>
       </div>
     </div>
