--- a/src/cosy/webclient/authentication/log-in.html
+++ b/src/cosy/webclient/authentication/log-in.html
@@ -34,7 +34,7 @@
         <button id="accept"
                 class="btn btn-lg btn-primary btn-block btn-success"
                 type="submit">
-          <i class="fa fa-check-circle"></i>
+          <i class="fa fa-check"></i>
         </button>
       </div>
     </div>
