Load headbar and dashboard at www client startup.

--- a/src/cosy/www/index.html
+++ b/src/cosy/www/index.html
@@ -34,7 +34,8 @@
           local Webclient = loader.load "cosy.webclient"
           loader.scheduler.addthread (function ()
             Webclient.init ()
-            loader.load "cosy.webclient.headbar" ()
+            loader.load "cosy.webclient.headbar"   ()
+            loader.load "cosy.webclient.dashboard" ()
           end)
           loader.scheduler.loop ()
         end, function (err)
