More use of jQuery in headbar.

--- a/src/cosy/webclient/headbar/init.html
+++ b/src/cosy/webclient/headbar/init.html
@@ -16,14 +16,6 @@
          class="navbar-brand"
          href="#">{{title}}</a>
     </div>
-    <div id="headbar:user"></div>
+    <div id="headbar-user"></div>
   </div>
 </nav>
-<script type="text/javascript">
-  $(window).resize (function () {
-    var height = $(".navbar-fixed-top").height ();
-    $(".main-content").css ({
-      "margin-top": (height + 1 ) + "px"
-    });
-  });
-</script>
