More use of jQuery in profile.

--- a/src/cosy/webclient/profile/edit.html
+++ b/src/cosy/webclient/profile/edit.html
@@ -13,7 +13,7 @@
         <label>
           <input id="avatar-button"
                  type="file"
-                 class="form-control"/>
+                 class="form-control btn btn-default btn-file"/>
         </label>
       </div>
       <div id="position-group"
@@ -27,7 +27,7 @@
                  id="address"
                  class="form-control has-feedback"
                  placeholder="{{profile:adress}}"
-                 value="{{address}}"
+                 value="{{position.address}}"
                  required />
         </div>
         <div id="position"
