Add async defer to loaded scripts in webclient.

--- a/src/cosy/www/index.html
+++ b/src/cosy/www/index.html
@@ -59,22 +59,28 @@
             type="text/javascript">
     </script>
     <script src="js/bootstrap.js"
-            type="text/javascript">
+            type="text/javascript"
+            async defer>
     </script>
     <script src="js/bootbox.js"
-            type="text/javascript">
+            type="text/javascript"
+            async defer>
     </script>
     <script src="js/map.js?v=3&sensor=false&libraries=places"
-            type="text/javascript">
+            type="text/javascript"
+            async defer>
     </script>
     <script src="js/position.js"
-            type="text/javascript">
+            type="text/javascript"
+            async defer>
     </script>
     <script src="js/recaptcha.js?render=explicit"
-            type="text/javascript">
+            type="text/javascript"
+            async defer>
     </script>
     <script src="/js/lua.vm.js"
-            type="text/javascript">
+            type="text/javascript"
+            async defer>
     </script>
   </body>
 </html>
