Update avatar field used in profile.

--- a/src/cosy/webclient/profile/edit.html
+++ b/src/cosy/webclient/profile/edit.html
@@ -7,7 +7,7 @@
         <div style="width:150px;height:150px;border:1px solid #000;text-align:center;margin:auto;">
           <img id="avatar"
                width="100%"
-               src="data:image/*;base64,{{{avatar}}}"
+               src="data:image/*;base64,{{avatar-full}}"
                alt="{{{profile:avatar}}}" />
         </div>
         <label>
