Move editor.css loading into index/editor html.

--- a/src/cosy/www/editor.html
+++ b/src/cosy/www/editor.html
@@ -16,6 +16,9 @@
     <link href="/css/font-awesome.min.css"
           rel="stylesheet"
           type="text/css" />
+    <link href="/editor.css"
+          rel="stylesheet"
+          type="text/css" />
     <title>CosyVerif</title>
   </head>
   <body>
